<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_anim"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/play_anim"
        app:lottie_loop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_service" />

    <Button
        android:id="@+id/btn_service_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_service_start" />

    <Button
        android:id="@+id/btn_service_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_service_stop" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_close" />

</LinearLayout>